Added content and a nice looking layout.

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,6 +1,3 @@
-<hgroup>
-  <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
-  {% if site.subtitle %}
-    <h2>{{ site.subtitle }}</h2>
-  {% endif %}
-</hgroup>
+	<hgroup>
+ 		<h1><a href="/index.html"><img src="/images/textEffect.png" height = 40 alt="Logo" id="logo" /></a></h1>
+	</hgroup>
