--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,5 @@
-<p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
-  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
-</p>
+	<p>
+  		Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+ 		<span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
+		- <a href="/site-info/">Site info</a>
+	</p>
