--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,26 @@
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 <link href="//fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="//fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+
+
+
+<style type="text/css"  media="all">
+/*Style for quote of the day*/
+ .rss-box {
+ 	border-top: thin dashed gray;
+ }
+
+
+
+.rss-title, .rss-title a{
+	font-family: verdana, arial, sans-serif;
+	text-decoration: none;
+	margin: 0;
+	padding-top: 0.5em;
+}
+
+.rss-item{
+	padding-top: 0.25em !important;
+}
+</style>
