--- a/source/_layouts/resume.html
+++ b/source/_layouts/resume.html
@@ -1,19 +1,15 @@
 {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
 {% include head.html %}
-<body {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
+<body {% if page.body_id %} id="{{ page.body_id }}" {% endif %}>
   <header id="banner_background">
     <div class ="degree"></div>
   </header>
   <div id="body_wrapper">
       <header role="banner">{% include header.html %}</header> 
       <nav role="navigation">{% include navigation.html %}</nav>
-      <div id="main">
-          <div id="content">
-              {{ content | expand_urls: root_url }}
-          </div>
-      </div>
      
   </div><!--ENDS BODY WRAPPER-->
+  {% include resume.html %}
 <div id="footer">
     <div class="degree">
         <footer role="contentinfo">{% include footer.html %}</footer>
