--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -6,14 +6,13 @@ html{
 	line-height: 1;
 	color: #49494b;
 	font-family: Tahoma, Arial, Helvetica, sans-serif;
-	font-size:  100%;
-	font-size: 14px;
+	font-size: 0.87em;
 	margin: 0;
 	
 }
 
 #banner_background{
-	height: 134px;
+	height: 9.6em;
 	width: 100%;
 	background: #e5e3dc url(/images/abstract_pattern_wallpaper.jpg);
 	border-bottom: 1px solid #fff;
@@ -27,7 +26,7 @@ html{
 }
 
 #body_wrapper>header{
-	margin-top: -189px;
+	margin-top: -9em;
 	background: initial;
 }
 
@@ -36,7 +35,7 @@ html{
 	font-size: 0.9em;
 	position: relative;
 	float: right;
-	margin-top: -50px;
+	margin-top: -3.45em;
 	border: none;
 	
 }
@@ -62,7 +61,7 @@ body{
 	background: linear-gradient(white, #0052CC);
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	padding-bottom: 20px;
+	padding-bottom: 2em;
 
 }
 
@@ -77,7 +76,7 @@ aside.sidebar{
 }
 
 aside.sidebar h1{
-	font-size: 19px;
+	font-size: 1.25em;
 }
 
 #search_bar, .subscription {
@@ -92,25 +91,25 @@ aside.sidebar h1{
 #subscription_link{
 	position: absolute;
 	text-indent: -999999em;
-	margin-top: -10px;
+	margin-top: -0.5em;
 }
 
 
 #main {
 	overflow:auto;
-	padding-bottom: 60px;  /* must be same height as the footer */
-	border-radius: 10px;
-	box-shadow: 7px 7px 10px #222222;
+	padding-bottom: 4.3em;  /* must be same height as the footer */
+	border-radius: 0.65em;
+	box-shadow: 0.45em 0.45em 0.65em #222222;
 }
 
 .blog-index>div{
-	margin-top: 55px;
-	padding-right: 55px;
-	padding-left: 55px;
+	margin-top: 3.45em;
+	padding-right: 3.45em;
+	padding-left: 3.45em;
 }
 
 #about_me{
-	min-height: 270px;
+	min-height: 16.86em;
 	margin-bottom: -2em;
 	background: url("/images/dotted-border.png") bottom left repeat-x;
 }
@@ -136,7 +135,7 @@ aside.sidebar h1{
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	height: 60px;
+	height: 4.3em;
 	background: #e5e3dc url(/images/abstract_pattern_wallpaper.jpg);
 	border-top: 1px solid #fff;
 }
