--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -128,6 +128,7 @@ aside.sidebar h1{
 	min-height: 16.86em;
 	margin-bottom: -2em;
 	background: url("/images/dotted-border.png") bottom left repeat-x;
+	padding-bottom: 1px;
 }
 
 #about_me h1{
