--- a/source/_includes/resume.html
+++ b/source/_includes/resume.html
@@ -23,12 +23,25 @@
 							
 
 								<div class="project">
-									<h2>UNC Systems Genetics</h2>
-									<h4>Spring 2015</h4>
-									<h3>Volunteer Researcher and Programmer</h3>
+									<h2>Premier, Inc.</h2>
+									<h4>Summer 2015</h4>
+									<h3>Software Developer Intern</h3>
 							
-										<div class="project_description">Use the D3 <b>JavaScript</b> library to visualize data in a SQLite database.
-										</div>
+										<p>
+											Created a user lookup tool using Facebook's <strong>React.js</strong> <strong>JavaScript</strong> library.
+										</p>
+										<p>
+											Used <strong>Ruby on Rails</strong> implemented with <strong>JRuby</strong> to process search requests and pass them to a <strong>Java 8</strong> library.
+										</p>
+										<p>
+											Used a <strong>Java 8</strong> library to asynchronously collect user data from various sources, including an IBM <strong>LDAP</strong> database. 
+										</p>
+										<p>
+											Used <strong>Guava</strong> features, including Optionals and Immutable Sets, to collect user data. 
+										</p>
+										<p>
+											Used a <strong>distributed database, Riak</strong>, to store and retrieve information.
+										</p>
 								</div><!--ENDS project-->
 
 
@@ -39,8 +52,9 @@
 									<h3>Volunteer Sales Analyst</h3>
 							
 										<div class="project_description">
-											<p>Used third party modules in <b>Python</b> to automate the analysis of sales data in Excel to determine appropriate shipping information, changing the process from taking one hour to one second.</p>
-											<p>Use <b>OLE DB</b> to connect to Microsoft Access files in <b>C#</b> and construct sales reports.</p>
+											<p>
+												Used third party modules in <strong>Python</strong> to automate the analysis of sales data in Excel to determine appropriate shipping information, changing the process from taking one hour to one second.
+											</p>
 										</div>
 								</div><!--ENDS project-->
 
@@ -60,8 +74,8 @@
 										<h4>Fall 2014</h4>
 										<h3>Audio Game for Visually Impaired</h3>
 										<div class="project_description">
-											<p>Implemented a custom <b>ORM</b> and <b>REST</b>ful interface to a <b>MySQL</b> backend.</p>
-											<p>Used <b>AJAX</b> to dynamically load and edit data using <b>REST</b>.</p>
+											<p>Implemented a custom <strong>ORM</strong> and <strong>REST</strong>ful interface to a <strong>MySQL</strong> backend.</p>
+											<p>Used <strong>AJAX</strong> to dynamically load and edit data using <strong>REST</strong>.</p>
 											<p>Used text to speech to read data in browser.</p>
 										</div>
 									</div>
@@ -74,7 +88,7 @@
 										<h4>Fall 2014</h4>
 										<h3>Dynamic Network of Go Moves</h3>
 										<div class="project_description">
-											<p>Used Google's <b>PageRank</b> algorithm to determine the most popular moves in the game of Go.</p>
+											<p>Used Google's <strong>PageRank</strong> algorithm to determine the most popular moves in the game of Go.</p>
 										</div>
 									</div>
 
@@ -86,8 +100,8 @@
 										<h4>Fall 2013</h4>
 										<h3>Alice-Like Program</h3>
 										<div class="project_description">
-											<p>Created an Alice-like program with a <b>MVC</b> architecture in <b>Java</b>.</p>
-											<p>Implemented a DSL with <b>recursive descent parsing</b> to control an <b>asynchronous animation</b> of actors.</p>
+											<p>Created an Alice-like program with a <strong>MVC</strong> architecture in <strong>Java</strong>.</p>
+											<p>Implemented a DSL with <strong>recursive descent parsing</strong> to control an <strong>asynchronous animation</strong> of actors.</p>
 										</div>
 									</div>
 
@@ -105,11 +119,10 @@
 							<div class="Major">
 								<ul>
 									<li>B.S. Computer Science</li>
-									<li>Japanese Minor</li>
 								</ul>
 							</div>
 							<div class="gpa">3.77 GPA</div>
-							<div>Relevant Coursework: Introduction to Statistics, Linear Algebra</div>
+							<div>Relevant Coursework: Introduction to Statistics, Probability, Linear Algebra</div>
 							</div><!--ENDS cv_content_wrapper-->
 						</div><!--ENDS education-->
 
@@ -122,14 +135,11 @@
 							
 								<ul>
 										<li>Languages:<br>
-											<span class="indent">Java, Python, C, JavaScript, HTML/CSS, SQL, PHP, Assembly</span></li>
-										<li>Algorithms:<br>
-											<span class="indent">Sorting, searching, recursive descent parsing, animation</span></li>
-										<li>Design Patterns:<br>
-											<span class="indent">Model-view-controllers, command objects, delegation</span></li>
-										<li>Threads/synchronization, implementing generics, exceptions</li>
-										<li>Unix/Linux</li>
-										<li>GUI Design</li>
+											<span class="indent">JavaScript, Ruby, JRuby, Java, Python, C, C++, HTML/CSS, SQL, PHP, Assembly</span></li>
+										<li>Tools:<br>
+											<span class="indent">git, Eclipse, IntelliJ, Maven, Lombok, Guava, XCode</span></li>
+										<li>Agile Development</li>
+										<li>Unix/Linux, OSX, Windows</li>
 										<li>Intermediate proficiency in Japanese</li>
 								</ul>
 							
